--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 body {
   font-family: 'Noto Sans', sans-serif;
   background-color: #ffff;
@@ -8,7 +9,40 @@ body {
 p{
  overflow-y: scroll;
 }
-
+.navbar{
+  display: flex;
+  background-color: #c8b6ff;
+  justify-content: space-between;
+}
+.logo, .account {
+  display: flex;
+}
+.account{
+  padding-right: 15px;
+  flex-direction: column;
+}
+#name{
+  font-size: 0.7rem;
+}
+#plus{
+  margin-top: 10%;
+  margin-left: 78%;
+}
+.list-icon{
+  margin-left: 10px;
+  width: 50px;
+  height: auto;
+}
+#myImage{
+  height: 50px;
+  width: auto;
+  border-radius: 50%;
+  margin-top: 20%;
+}
+.heading {
+  font-size: 30px;
+  font-family: 'Pacifico', cursive;
+}
 .notes {
   display: block;
 }
