--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,7 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap");
 body {
-  font-family: "Noto Sans", sans-serif;
   background-color: #ffff;
   margin: 0;
   padding: 0;
@@ -13,6 +12,12 @@ p {
   display: flex;
   background-color: #c8b6ff;
   justify-content: space-between;
+}
+.note-icon {
+  height: 30px;
+  padding-top: 47px;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 .logo,
 .account {
@@ -29,16 +34,21 @@ p {
   margin-top: 10%;
   margin-left: 78%;
 }
+.add-note {
+  margin-left: 78%;
+  margin-top: 0;
+}
 .list-icon {
   margin-left: 10px;
   width: 50px;
   height: auto;
 }
 #myImage {
-  height: 50px;
-  width: auto;
+  height: 30px;
+  width: 30px;
   border-radius: 50%;
-  margin-top: 20%;
+  margin-top: 50%;
+  margin-left: 10px;
 }
 .heading {
   font-size: 30px;
@@ -50,6 +60,12 @@ p {
 
 .toggle-class {
   display: none;
+}
+.tittle {
+  font-family: "Dosis", sans-serif;
+}
+.details {
+  font-family: "Dosis", sans-serif;
 }
 #description {
   display: flex;
@@ -74,16 +90,21 @@ p {
 .notes-data {
   margin: 2%;
   padding: 5%;
-  border-radius: 10%;
+  border-radius: 6px;
   background-color: #d7b9d5;
   height: 15rem;
   width: 15rem;
+  overflow-y: scroll;
+}
+.buttons {
+  display: flex;
+  padding-left: 25px;
 }
 
 .edit-button,
 .save-button {
   align-items: center;
-  background-color: #c8b6ff;
+  background-color: #ada7c9;
   border: 2px solid #111;
   border-radius: 8px;
   box-sizing: border-box;
@@ -96,13 +117,15 @@ p {
   justify-content: center;
   line-height: 24px;
   max-width: 100%;
-  padding: 0 25px;
   position: relative;
   text-align: center;
   text-decoration: none;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
+  height: 40px;
+  margin-left: 20%;
+  margin-right: 10%;
 }
 
 .edit-button:after {
@@ -134,13 +157,25 @@ p {
 }
 
 @media (min-width: 768px) {
-  .edit-button {
-    padding: 0 40px;
+  .notes {
+    margin-top: -10%;
+    max-width: 300px;
+  }
+  .notes-data {
+    max-width: 150px;
+  }
+  #plus {
+    margin-top: 50px;
+  }
+  #display {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
   }
 }
 
 .delete-button {
-  background: #441151;
+  background: #ada7c9;
   border: 2px solid #000000;
   border-radius: 6px;
   box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
@@ -153,7 +188,6 @@ p {
   line-height: 16px;
   min-height: 40px;
   outline: 0;
-  padding: 5px 15px;
   text-align: center;
   text-rendering: geometricprecision;
   text-transform: none;
@@ -161,6 +195,7 @@ p {
   -webkit-user-select: none;
   touch-action: manipulation;
   vertical-align: middle;
+  height: 40px;
 }
 
 .delete-button:hover,
@@ -206,11 +241,7 @@ textarea {
   font-family: "Noto Sans", sans-serif;
 }
 @media (min-width: 960px) {
-  #display {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-  }
+  
 }
 .text-right {
   display: none;
@@ -241,30 +272,46 @@ textarea {
 .ok {
   background-color: rgb(28, 53, 195);
 }
-
-.popup {
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.4);
-  display: none;
-}
-.popup-content {
-  background-color: white;
-  margin: 10% auto;
-  padding: 20px;
-  border: 1px solid #888888;
-  width: 30%;
-  font-weight: bolder;
-}
-.popup-content button {
-  display: block;
-  margin: 0 auto;
-}
 .show {
   display: block;
+}
+#snackbar {
+  visibility: hidden; 
+  min-width: 250px;
+  margin-left: -100px;
+  background-color: #61e6f5; 
+  color: #000000; 
+  text-align: center; 
+  border-radius: 2px; 
+  padding: 16px; 
+  position: fixed; 
+  z-index: 1;
+  left: 40%; 
+  bottom: 30px;
+}
+
+#snackbar.show {
+  visibility: visible; 
+  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+@-webkit-keyframes fadein {
+  from {bottom: 0; opacity: 0;}
+  to {bottom: 30px; opacity: 1;}
+}
+
+@keyframes fadein {
+  from {bottom: 0; opacity: 0;}
+  to {bottom: 30px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+  from {bottom: 30px; opacity: 1;}
+  to {bottom: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+  from {bottom: 30px; opacity: 1;}
+  to {bottom: 0; opacity: 0;}
 }
